--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "cheminfo-tools": "^1.0.2",
     "mocha": "^2.2.5",
     "mocha-better-spec-reporter": "^2.1.1",
-    "should": "^7.0.2"
+    "should": "^7.0.2",
+    "spectra-data":"^1.7.6",
+    "openchemlib-extended":"1.5.0"
   },
   "dependencies": {
-    "jcampconverter": "^2.0.8",
     "ml-stat": "^1.0.1",
     "ml-matrix": "^0.1.0",
     "ml-gsd": "0.1.0",
